--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 
   <!-- Basic Page Needs
@@ -41,30 +41,36 @@
 </nav>
 <div id="panel">
   <header id="hero">
-    <hgroup class="idastudillo">
-      <h1>Ricardo Astudillo</h1>
-      <h2>candidato a presidente municipal</h2>
-      <h3>municipio de Corregidora, Querétaro</h3>
-    </hgroup>
-    <figure class="corregidoraposible">
-      <hgroup>
-        <h3>Corregidora</h3>
-        <h4>¡Posible!</h4>
+    <div class="container">
+      <hgroup class="idastudillo">
+        <h1>Ricardo Astudillo</h1>
+        <h2>candidato a presidente municipal</h2>
+        <h3>municipio de Corregidora, Querétaro</h3>
       </hgroup>
-    </figure>
-    <div class="coalicion">
-      <figure class="pri"></figure>
-      <figure class="verde"></figure>
+      <figure class="corregidoraposible">
+        <hgroup>
+          <h3>Corregidora</h3>
+          <h4>¡Posible!</h4>
+        </hgroup>
+      </figure>
+      <div class="coalicion">
+        <figure class="pri"></figure>
+        <figure class="verde"></figure>
+      </div>
     </div>
   </header>
   <section id="intro">
     <main>
-      <p>
-        Arquitecto titulado, Ricardo Astudillo Suárez es presidente del Partido Verde Ecologista de Méxcio en Querétaro.  En su trayectoria ha sido regidor del Municipio de Corregidora (2006 - 2009), Diputado local al congreso de Querétaro (2009 - 2012), y Diputado Federal por el distrito 2 de Querétaro.  En el congreso ocupó los cargos de secretario de la comisión de Energía e integrante de las comisiones de Medio Ambiente y Recursos Naturales y de Presupuesto y Cuenta Pública y en la comisión especial  de casos de corrupción ocurridos en Petróleos Mexicanos.
-      </p>
+      <div class="container">
+        <p>
+          Arquitecto titulado, Ricardo Astudillo Suárez es presidente del Partido Verde Ecologista de Méxcio en Querétaro.  En su trayectoria ha sido regidor del Municipio de Corregidora (2006 - 2009), Diputado local al congreso de Querétaro (2009 - 2012), y Diputado Federal por el distrito 2 de Querétaro.  En el congreso ocupó los cargos de secretario de la comisión de Energía e integrante de las comisiones de Medio Ambiente y Recursos Naturales y de Presupuesto y Cuenta Pública y en la comisión especial  de casos de corrupción ocurridos en Petróleos Mexicanos.
+        </p>
+      </div>
     </main>
     <blockquote>
-      "Un corregidora unido,<br /> con mejores servicios,<br /> mucho mas fuerte<br /> y mejor para todos"
+      <div class="container">
+        <p>"Un corregidora unido,<br /> con mejores servicios,<br /> mucho mas fuerte<br /> y mejor para todos"</p>
+      </div>
     </blockquote>
   </section>
   <section id="comunidades">
